--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="skill-row">
         <img class="img3" src="images/skills3.gif" alt="coding">
         <h3>Designer</h3>
-        <p>I am a certified NCIII Visual Graphics Designer under TESDA. It's fun and enjoying to express my creativity thru designing.</p>
+        <p>I am a Visual Graphics Designer. It's fun and enjoying to express my creativity thru designing.</p>
       </div>
     </div>
       <hr>
