--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="https://www.linkedin.com/in/chrissa-babe-himaya-78b086203/">LinkedIn</a>
+      <a class="footer-link" href="www.linkedin.com/in/chrissababehimaya">LinkedIn</a>
       <a class="footer-link" href="https://www.facebook.com/chrissababe.himaya/">Facebook</a>
-      <a class="footer-link" href="https://www.appbrewery.co/">Website</a>
+      <a class="footer-link" href="https://chrissababe.github.io/cv/">Website</a>
       <p class="copyright">© 2020 Chrissa @ Personal Website.</p>
     </div>
 
