--- a/index.html
+++ b/index.html
@@ -59,9 +59,9 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="www.linkedin.com/in/chrissababehimaya target="_blank">LinkedIn</a>
-      <a class="footer-link" href="https://www.facebook.com/chrissababe.himaya/ target="_blank">Facebook</a>
-      <a class="footer-link" href="https://chrissababe.github.io/cv/ target="_blank">Website</a>
+      <a class="footer-link" href="www.linkedin.com/in/chrissababehimaya" target="_blank">LinkedIn</a>
+      <a class="footer-link" href="https://www.facebook.com/chrissababe.himaya/" target="_blank">Facebook</a>
+      <a class="footer-link" href="https://chrissababe.github.io/cv/" target="_blank">Website</a>
       <p class="copyright">© 2020 Chrissa @ Personal Website.</p>
     </div>
 
