--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       <div class="skill-row">
         <img class="img3" src="images/skills3.gif" alt="coding">
         <h3>Designer</h3>
-        <p>I am a Visual Graphics Designer. It's fun and enjoying to express my creativity thru designing.</p>
+        <p>I am a certified NCIII Visual Graphics Designer under TESDA. It's fun and enjoying to express my creativity thru designing.</p>
       </div>
     </div>
       <hr>
@@ -59,9 +59,9 @@
 
 
     <div class="bottom-container">
-      <a class="footer-link" href="www.linkedin.com/in/chrissababehimaya" target="_blank">LinkedIn</a>
-      <a class="footer-link" href="https://www.facebook.com/chrissababe.himaya/" target="_blank">Facebook</a>
-      <a class="footer-link" href="https://chrissababe.github.io/cv/" target="_blank">Website</a>
+      <a class="footer-link" href="https://www.linkedin.com/in/chrissa-babe-himaya-78b086203/" target="_blank" >LinkedIn</a>
+      <a class="footer-link" href="https://www.facebook.com/chrissababe.himaya/" target="_blank" >Facebook</a>
+      <a class="footer-link" href="https://chrissababe.github.io/cv/" target="_blank" >Website</a>
       <p class="copyright">© 2020 Chrissa @ Personal Website.</p>
     </div>
 
