--- a/index.html
+++ b/index.html
@@ -27,14 +27,14 @@
       </div>
       <hr>
 
-      <div class="skills">
+<!--       <div class="skills">
         <h2>My Skills.</h2><hr>
         <div class="skill-row">
           <img class="img1" src="images/skills1.gif" alt="skills">
           <h3>Programmer</h3>
-          <p>Creating software applications for windows and web application for other cross platform operating system.</p>
+          <p>Creating software applications for windows and web application for other cross platform operating system.</p> -->
         </div>
-
+hgjbm
         <div class="skill-row">
           <img class="img2" src="images/skills2.gif" alt="coding">
           <h3>Developer</h3>
